Fix issues + coverage
Se arreglan detalles gracias a las indicaciones de SonarQube