@@ -5,7 +5,6 @@ import com.fidelidad.Compra;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CompraRepositorioMemoria implements CompraRepositorio{
 
@@ -20,15 +19,14 @@ public class CompraRepositorioMemoria implements CompraRepositorio{
     public List<Compra> obtenerPorCliente(String idCliente) {
         return compras.stream()
                 .filter(c -> c.getCliente().getId().equals(idCliente))
-                .collect(Collectors.toList());
+                .toList();
     }
-
     @Override
     public List<Compra> obtenerPorClienteYFecha(String idCliente, LocalDate fecha) {
         return compras.stream()
                 .filter(c-> c.getCliente().getId().equals(idCliente)
                     && c.getFecha().equals(fecha))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
